2009-10-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sciwrappers.c:
   Remove unnecessary line number margin padding.


2009-10-16  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix crash opening project when Geany started with no geany.conf.


2009-10-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/ScintillaBase.h, scintilla/ScintillaBase.cxx, src/utils.c,
   src/utils.h, src/sciwrappers.c, src/editor.c, doc/geany.txt,
   doc/geany.html:
   Add word part autocompletion for the current selected item when
   pressing Tab - Enter still completes normally.
   Add foreach_str() API macro.
   Temporarily modify scintilla to say if tab was used for
   autocompletion.
 * src/templates.c, src/build.c, src/utils.c, src/utils.h,
   src/project.c, src/search.c, src/editor.c, src/ui_utils.c,
   plugins/classbuilder.c:
   Revert r4301 - utils_free_pointers() taking 4 arguments.
 * src/highlighting.c, src/highlighting.h, src/plugindata.h,
   src/document.c, src/plugins.c, plugins/geanyfunctions.h,
   plugins/splitwindow.c:
   Add highlighting_set_styles() to API, use for Split Window plugin so
   filetypes.common settings get set too.
   Make highlighting_set_styles() take GeanyFiletype pointer instead of
   filetype id.
 * src/document.c, src/editor.c, plugins/splitwindow.c:
   Call editor_apply_update_prefs() from editor_create_widget() so
   correct tab width and other settings are applied for Split Window
   plugin.


2009-10-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Don't include trailing newlines when using reflow command.
 * src/notebook.c:
   Add stock close buttons to notebook tab popup menu.
 * src/plugindata.h, src/document.c, src/plugins.c, src/ui_utils.c,
   plugins/geanyfunctions.h:
   Add document_get_notebook_page() to API.
   Minor edits of dox.
 * data/templates/files/file.html, data/templates/files/file.php: